--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-minimal
+title: Wuxia Scrape
+description: Wuxia Scrape is a python application that writes webnovels from NovelFull into text documents on your computer.
